# FEA---GPU-Optimization

./: .gitignore
FinalProject/: README.md
FinalProject/MR Solver/: main.cpp
FinalProject/MR Solver - Parallel/: experiment160.sh  experiment20.sh  experiment40.sh  experiment80.sh
FinalProject/NH Solver/: main.cpp
FinalProject/NH Solver - Parallel/: README.md
FinalProject/SVK Solver/: advisor-survey.txt  main.cpp
FinalProject/SVK Solver - Parallel/: CMakeLists.txt  experiment160.sh  experiment40.sh  experiment80.sh
FinalProject/St. Venant-Kirchhoff/: main_gprof  perf_report.txt  perf_report_isolated_core.txt  run_main.sh
General Solver/: CMakeLists.txt  main.cpp
General Solver - Parallel/: CMakeLists.txt  main.cpp  run.sh
General Solver - Parallel/include/: Assembler.hpp  Assembler.tpp  ElementEvaluator.hpp  ElementEvaluator.tpp  NonLinearSolver.hpp  NonLinearSolver.tpp  OutputWriter.hpp  StVenantKirchhoff.hpp
General Solver - Parallel/solutions/: solution_1.vtu  solution_10.vtu  solution_2.vtu  solution_3.vtu  solution_4.vtu  solution_5.vtu  solution_6.vtu  solution_7.vtu  solution_8.vtu  solution_9.vtu
General Solver - Parallel/solutions_euler/: pull_solutions.sh
General Solver - Parallel/solutions_euler/solutions/: solution_1.vtu  solution_10.vtu  solution_2.vtu  solution_4.vtu  solution_5.vtu  solution_6.vtu
General Solver/include/: Assembler.hpp  Assembler.tpp  BoundaryConditions.hpp  BoundaryConditions.tpp  ElementEvaluator.hpp  ElementEvaluator.tpp  Mesh.hpp  MeshGenerator.tpp  NonLinearSolver.hpp  NonLinearSolver.tpp
General Solver/solutions/: solution_1.vtu  solution_10.vtu
MR Solver/: main.cpp
MR Solver - Parallel/: CMakeLists.txt  experiment20.sh  main.cpp  run.sh  run_experiment.sh
MR Solver - Parallel/include/: Assembler.hpp  ElementEvaluator.tpp
MR Solver - Parallel/solutions/: solution_1.vtu  solution_11.vtu  solution_12.vtu  solution_14.vtu  solution_2.vtu  solution_21.vtu  solution_24.vtu  solution_28.vtu  solution_31.vtu  solution_35.vtu  solution_41.vtu  solution_42.vtu  solution_46.vtu  solution_48.vtu  solution_5.vtu  solution_7.vtu  solution_8.vtu
MR Solver - Parallel/src/: ConjugateGradientSolver.cpp
MR Solver - Parallel/valgrind_analysis_spark/: FEA1.err  FEA1.out  FEA3.out  FEA4.out  cg.out
MR Solver/include/: Assembler.tpp  ElementEvaluator.hpp  ElementEvaluator.tpp  NonLinearSolver.tpp  ShapeFunction.hpp
MR Solver/solutions/: final_solution.pvd  solution_1.vtu  solution_10.vtu  solution_11.vtu  solution_15.vtu  solution_16.vtu  solution_17.vtu  solution_19.vtu  solution_2.vtu  solution_21.vtu  solution_23.vtu  solution_26.vtu  solution_27.vtu  solution_29.vtu  solution_31.vtu  solution_34.vtu  solution_38.vtu  solution_4.vtu  solution_40.vtu  solution_41.vtu  solution_43.vtu  solution_44.vtu  solution_45.vtu  solution_48.vtu  solution_5.vtu  solution_50.vtu  solution_7.vtu  solution_9.vtu
MR Solver/src/: MooneyRivlin.cpp
NH Solver/: main.cpp
NH Solver - Parallel/: CMakeLists.txt  CMakePresets.json  FEA1.err  FEA1.out  FEA2.err  FEA2.out  FEA3.err  FEA3.out  FEA4.err  FEA4.out  cg.out  cg_report.txt  cl.out-01  cl.out-02  experiment160.sh  experiment40.sh  experiment80.sh  main.cpp
NH Solver - Parallel/experiments/experiment160/: FEA160_2.out  FEA160_4.out  FEA160_6.out
NH Solver - Parallel/experiments/experiment20/: FEA20_18.out  FEA20_20.out  FEA20_22.out  FEA20_24.out  FEA20_32.out  FEA20_38.out  FEA20_42.out  FEA20_6.out
NH Solver - Parallel/experiments/experiment40/: FEA40_12.out  FEA40_14.out  FEA40_18.out  FEA40_2.out  FEA40_20.out  FEA40_22.out  FEA40_24.out  FEA40_38.out  FEA40_40.out  FEA40_44.out  FEA40_46.out  FEA40_8.out
NH Solver - Parallel/experiments/experiment80/: FEA80_10.out  FEA80_16.out  FEA80_22.out  FEA80_26.out  FEA80_30.out  FEA80_32.out  FEA80_34.out  FEA80_38.out  FEA80_4.out  FEA80_40.out  FEA80_42.out  FEA80_44.out  FEA80_46.out  FEA80_6.out
NH Solver - Parallel/include/: Assembler.tpp  NeoHookean.hpp  NonLinearSolver.hpp
NH Solver - Parallel/mesh/: elems.txt  points.txt
NH Solver - Parallel/solutions/: solution_1.vtu  solution_10.vtu  solution_11.vtu  solution_12.vtu  solution_13.vtu  solution_14.vtu  solution_15.vtu  solution_16.vtu  solution_17.vtu  solution_18.vtu  solution_19.vtu  solution_2.vtu  solution_20.vtu  solution_21.vtu  solution_22.vtu  solution_23.vtu  solution_24.vtu  solution_25.vtu  solution_26.vtu  solution_27.vtu  solution_28.vtu  solution_29.vtu  solution_3.vtu  solution_30.vtu  solution_31.vtu  solution_32.vtu  solution_33.vtu  solution_34.vtu  solution_35.vtu  solution_36.vtu  solution_37.vtu  solution_38.vtu  solution_39.vtu  solution_4.vtu  solution_40.vtu  solution_41.vtu  solution_42.vtu  solution_43.vtu  solution_44.vtu  solution_45.vtu  (+10 more)
NH Solver - Parallel/src/: NeoHookean.cpp
NH Solver - Parallel/valgrind_analysis_spark/: FEA1.err  FEA3.err  FEA3.out  FEA4.out  cg.out  cg_report.txt
NH Solver/include/: Assembler.tpp  ElementEvaluator.tpp  NonLinearSolver.tpp
NH Solver/solutions/: final_solution.pvd  solution_1.vtu  solution_10.vtu  solution_100.vtu  solution_1000.vtu  solution_101.vtu  solution_102.vtu  solution_103.vtu  solution_104.vtu  solution_105.vtu  solution_106.vtu  solution_107.vtu  solution_108.vtu  solution_109.vtu  solution_11.vtu  solution_110.vtu  solution_111.vtu  solution_112.vtu  solution_113.vtu  solution_114.vtu  solution_115.vtu  solution_116.vtu  solution_117.vtu  solution_118.vtu  solution_119.vtu  solution_12.vtu  solution_120.vtu  solution_121.vtu  solution_122.vtu  solution_123.vtu  solution_124.vtu  solution_125.vtu  solution_126.vtu  solution_127.vtu  solution_128.vtu  solution_129.vtu  solution_13.vtu  solution_130.vtu  solution_131.vtu  solution_132.vtu  (+961 more)
SVH Solver/: advisor-roofline.html
SVH Solver - Parallel/: CMakeLists.txt  main.cpp  run.sh  run_step1.sh  run_step2.sh  run_step3.sh  run_step4.sh  run_step5a.sh  run_step5b.sh  run_step5c.sh
SVK Solver - Parallel/: experiment160.sh  experiment40.sh  experiment80.sh  run.sh
St. Venant-Kirchhoff/: analysis_gprof.txt  main.cpp  run_main.sh
(+264 files in other folders)
